--- a/templates/agreement/show.html.twig
+++ b/templates/agreement/show.html.twig
@@ -28,11 +28,11 @@
             <div class="form-group"><label>{% trans %}label.pensionPercentage{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.pensionPercentage }}</div></div>
             <div class="form-group"><label>{% trans %}label.integralSalary{% endtrans %}</label><div class="form-control-plaintext">{% if agreement.integralSalary %}{% trans from 'messages' %}label.yes{% endtrans %}{% else %}{% trans from 'messages' %}label.no{% endtrans %}{% endif %}</div></div>
             <div class="form-group"><label>{% trans %}label.highRisk{% endtrans %}</label><div class="form-control-plaintext">{% if agreement.highRisk %}{% trans from 'messages' %}label.yes{% endtrans %}{% else %}{% trans from 'messages' %}label.no{% endtrans %}{% endif %}</div></div>
-            <div class="form-group"><label>{% trans %}label.initAt{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.initAt ? agreement.initAt|date('Y-m-d H:i:s') : '-' }}</div></div>
-            <div class="form-group"><label>{% trans %}label.finishAt{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.finishAt ? agreement.finishAt|date('Y-m-d H:i:s') : '-' }}</div></div>
+            <div class="form-group"><label>{% trans %}label.initAt{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.initAt ? agreement.initAt|date('Y-m-d', app.user.timezone) : '-' }}</div></div>
+            <div class="form-group"><label>{% trans %}label.finishAt{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.finishAt ? agreement.finishAt|date('Y-m-d', app.user.timezone) : '-' }}</div></div>
             <div class="form-group"><label>{% trans %}label.status{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.statusInstance.name|default('-') }}</div></div>
-            <div class="form-group"><label>{% trans %}label.createdAt{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.createdAt ? agreement.createdAt|date('Y-m-d H:i:s') : '-' }}</div></div>
-            <div class="form-group"><label>{% trans %}label.updatedAt{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.updatedAt ? agreement.updatedAt|date('Y-m-d H:i:s') : '-' }}</div></div>
+            <div class="form-group"><label>{% trans %}label.createdAt{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.createdAt ? agreement.createdAt|date('Y-m-d H:i:s', app.user.timezone) : '-' }}</div></div>
+            <div class="form-group"><label>{% trans %}label.updatedAt{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.updatedAt ? agreement.updatedAt|date('Y-m-d H:i:s', app.user.timezone) : '-' }}</div></div>
             <div class="form-group"><label>{% trans %}label.createdBy{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.createdByInstance.name|default('-') }}</div></div>
             <div class="form-group"><label>{% trans %}label.updatedBy{% endtrans %}</label><div class="form-control-plaintext">{{ agreement.updatedByInstance.name|default('-') }}</div></div>
         </div>
