--- a/templates/payroll/_ajax.html.twig
+++ b/templates/payroll/_ajax.html.twig
@@ -13,7 +13,7 @@
         {# <td>{{ _payroll.pdfPath }}</td> #}
         {# <td>{{ _payroll.xmlPath }}</td> #}
         {# <td>{{ _payroll.parentIdInstance.number|default('-') }}</td> #}
-        {# <td>{{ _payroll.downloadedAt ? _payroll.downloadedAt|date('Y-m-d H:i:s') : '-' }}</td> #}
+        {# <td>{{ _payroll.downloadedAt ? _payroll.downloadedAt|date('Y-m-d H:i:s', app.user.timezone) : '-' }}</td> #}
         <td class="text-center">
             <div class="btn-group">
                 <a href="{{ path('flexphp.payroll.payrolls.read', {id: _payroll.id}) }}" class="btn btn-sm btn-outline-light" title="{% trans from 'messages' %}action.read{% endtrans %}">
