--- a/templates/paysheet/_ajax.html.twig
+++ b/templates/paysheet/_ajax.html.twig
@@ -6,7 +6,7 @@
         {# <td class="money-format text-right">{{ _paysheet.isDraft ? 0 : _paysheet.totalPaid }}</td> #}
         <td class="money-format text-right">{{ _paysheet.total }}</td>
         <td class="money-format text-right">{{ _paysheet.isDraft ? 0 : (_paysheet.total - _paysheet.totalPaid) }}</td>
-        <td class="timeago-format">{{ _paysheet.createdAt ? _paysheet.createdAt|date('Y-m-d H:i:s') : '-' }}</td>
+        <td class="timeago-format">{{ _paysheet.createdAt ? _paysheet.createdAt|date('Y-m-d H:i:s', app.user.timezone) : '-' }}</td>
         <td class="text-left">
             <div class="btn-group">
                 <a href="{{ path('flexphp.payroll.paysheets.read', {id: _paysheet.id}) }}" class="btn btn-sm btn-outline-light" title="{% trans from 'messages' %}action.read{% endtrans %}">
